source/docs/assets/css/main.css
/* ... */
h3.changelog {
  font-family: Avenir-Heavy;
  font-size: 24px;
  color: #313945;
  line-height: 18px;
  margin-bottom: 25px;
  margin-top: 0;
}
#toc {
  margin-bottom: 50px;
}
.pio-docs-sidebar {
  position: sticky;
  top: 110px !important;
  margin-bottom: 90px;
}
.pio-docs-sidebar #toc h4 {
  margin-top: 35px;
}
.share-buttons {
  margin-bottom: 20px;
}

.tab-content-heading {
  margin-top: 15px; /*decrease top margin for headings located in tab switchers*/
}

.featured > li > a {
  text-transform: capitalize;
  margin-bottom: 10px;
}
.featured > li {
  margin-top: 15px;
  font-size: 17px;
}

.featured {
  display: block;
  text-align: ;
}
.article-subhead {
  font-family: Avenir-Heavy;
  font-size: 16px;
  color: #44525E;
  line-height: 24px;
}

.start {
  display: block;
  background-color: white;
  padding: 30px;
}

.start > li > a {
  text-align: left;
}
.cta{
  display:block;
}
.mb-20 {
  margin-bottom: 20px!important;
}
.mb-40 {
  margin-bottom: 40px!important;
}
.mb-70 {
  margin-bottom: 70px!important;
}

body {
  font-family: Avenir-Roman;
  font-size: 16px;
  line-height: 1.65em;
  -webkit-font-smoothing: antialiased;
  -webkit-text-stroke: 1px transparent;
  font-smoothing: antialiased;
  padding-top: 160px;
  background-color: #fff;
  color: #333;
  min-height: 100%;
  margin: 0;
}

body.row.main {
  position: relative;
  top:50px;
  /* For scrollspy */
}

header {
  margin-bottom: 20px;
}

.main{
  margin-bottom: 40px;
}

.article {
  background-color: white;
  text-overflow: clip!important;
}

.topnav {
  font-size: 0.9em;
  color: #000;
  padding-bottom: 20px;
  text-transform: capitalize;

}
.top-container {
  padding-top: 70px;
}
.pio-breadcrumb {
  list-style-type: none;
  padding-left: 0;
}
.pio-breadcrumb li {
  display:inline;
  color:#0093c9;
}
.pio-breadcrumb a{
  color:#0093c9;
}
.pio-breadcrumb a:hover{
  text-decoration: none;
  opacity: 0.65;
}
a.not-allowed{
  color: #313945;
  text-decoration: none;
}
a.not-allowed:hover {
  cursor: not-allowed;
  color: #313945;
  text-decoration: none;
  opacity: inherit;

}


.pio-breadcrumb li:after {
  content: ' / ';
}
.pio-breadcrumb li:last-child:after {
  content: '';
}

/*
* Related
*
* Related Links in the sidebar
*/
.related {
  padding-left: 0;
}
.related li{
  list-style-type: none;
  padding-left: 0;
  margin-bottom: 14px;
}
.related li a{
  font-family: Avenir-Roman;
  font-size: 13px;
  color: #0093c9;
  line-height: 18px;
}
.related li a:hover{
  text-decoration: none;
  opacity: 0.65;
}


.pio-action-container {
  text-align:center;
  margin-top:20px;
}
.pio-action-container-inner {
  width:100%;
  padding: 20px;
  display: inline-block;
  float: none;
  color: #0093c9;
  border: #EEF2F3 solid 2px;
}
.pio-category-container {
  text-align:center;
  margin-top:20px;
}
.pio-category-container-inner {
  width:100%;
  display: inline-block;
  float: none;
}
.pio-cat-container-inner {
  width:100%;
  padding: 20px;
  display: inline-block;
  float: none;
  border: #0093c9 solid 2px;

}

.pio-action-container-inner:hover {
  border: #0093c9 solid 2px;
  transition: 200ms all;
}
.pio-cat-container-inner:hover {
  border: #217CA1 solid 2px;
  transition: 200ms all;

}
.nav .open>a, .nav .open>a:focus, .nav .open>a:hover, .navbar-nav .dropdown-menu>li>a:focus, .navbar-nav .dropdown-menu>li>a:hover{
  color: #EFD01B !important;
  background-color: #181d21;
  box-shadow: inset 0 -2px 0 #EFD01B !important;
}
.nav .dropdown:focus >a, .nav .dropdown:hover>a{
  color: #EFD01B !important;
  box-shadow: inset 0 -4px 0 #EFD01B !important;
  background-color: #181d21;
}


input[type="search"] {
  width: 100%;
  -webkit-transition: all 0.30s ease-in-out;
  -moz-transition: all 0.30s ease-in-out;
  -ms-transition: all 0.30s ease-in-out;
  -o-transition: all 0.30s ease-in-out;
  outline: none;
  padding: 9px 55px;
  margin: 0;
  border: none;
  background: #78868E;
  border-radius: 0;
  color:white!important;
}

input[type="search"]:focus {

  box-shadow:none;
  border:none;
}
input[type="search"]::-webkit-input-placeholder {
   color: white;
}

input[type="search"]:-moz-placeholder { /* Firefox 18- */
   color: white;
}

input[type="search"]::-moz-placeholder {  /* Firefox 19+ */
   color: white;
}

input[type="search"]:-ms-input-placeholder {
   color: white;

  box-shadow:none;
  border:none;
}
input[type="search"]::-webkit-input-placeholder {
   color: white;
}

input[type="search"]:-moz-placeholder { /* Firefox 18- */
   color: white;
}

input[type="search"]::-moz-placeholder {  /* Firefox 19+ */
   color: white;
}

input[type="search"]:-ms-input-placeholder {
   color: white;
}
.search-form {
  margin-top: 8px;
  list-style: none;
}

.landing-search {
  height: 60px;
  margin: 15px auto 25px auto;
}
.landing-search input{
  font-size: 30px;
  height: 60px;
}
.landing-search.form-control{
  height:70px;
}
.landing-search.form-control i{
  font-size: 30px;
  padding-top: 12px;
}
i.landing-search.form-control-feedback.glyphicon.glyphicon-search {
  font-size: 40px;
  padding: 12px 45px 0px 0px;
}
.search a:before {
  width:6px;
  height:6px;
  border:3px solid #c55500;
  background:transparent;
  /* css3 */
  -webkit-border-radius:12px;
  -moz-border-radius:12px;
  border-radius:12px;
}

.search a:after {
  left:10px;
  width:3px;
  height:7px;
  margin-top:0;
  /* css3 */
  -webkit-transform:rotate(-45deg);
  -moz-transform:rotate(-45deg);
  -ms-transform:rotate(-45deg);
  -o-transform:rotate(-45deg);
  transform:rotate(-45deg);
}

.search a:hover:before,
.search a:focus:before,
.search a:active:before {
  border-color:#730800;
  background:transparent;
}

.search a:hover:after,
.search a:focus:after,
.search a:active:after {
  background:#730800;
}

.has-feedback .form-control-feedback {
  top:0px;
}

.form-group {
  margin-bottom: 0px;

}

input.form-control{
  opacity: 0.6;
  transition: all 0.2s ease-in;
  color: #000;
}

  input.form-control:focus{
    opacity: 1;
  }
/* ... */

